--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <HTML><HEAD>
- <TITLE>3DS Online Tools</TITLE> 
-<META http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<TITLE>3DS Online Tools</TITLE> 
 <META name="viewport" content="width=400"> 
-<SCRIPT src="go2_files/autostyle.js" type="text/javascript"></SCRIPT>
- 
-<SCRIPT language="javascript">
+<SCRIPT src="autostyle.js" type="text/javascript"></SCRIPT>
+ <SCRIPT language="javascript">
 var is3DS = navigator.platform.indexOf("Nintendo 3DS") >= 0;
 var x=new XMLHttpRequest();
 x.open('GET','rop.json',false);
