--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ function titleunset(obj) {
 	 </DIV></DIV>
 <DIV style="height: 46px; text-align: left; -ms-overflow-x: hidden; -ms-overflow-y: scroll;">
 <DIV id="paramspane" style="text-align: right;"></DIV></DIV></DIV>
-<DIV id="navi"><IMG width="320" height="28" src="go2_files/3ds_navi.png" border="none" 
+<DIV id="navi"><IMG width="320" height="28" src="3ds_navi.png" border="none" 
 usemap="#navigation"> <MAP name="navigation"><AREA onclick="history.back();" 
   shape="rect" coords="0,1,42,28"> <AREA onclick="history.forward();" shape="rect" 
   coords="43,1,85,28"> <AREA onclick="location.reload();" shape="rect" coords="86,1,127,28"> 
