--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <SCRIPT src="autostyle.js" type="text/javascript"></SCRIPT>
  <SCRIPT language="javascript">
 var is3DS = navigator.platform.indexOf("Nintendo 3DS") >= 0;
+alert(is3DS);
 var x=new XMLHttpRequest();
 x.open('GET','rop.json',false);
 x.send();
