--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ var is3DS = navigator.platform.indexOf("Nintendo 3DS") >= 0;
 var x=new XMLHttpRequest();
 x.open('GET','rop.json',false);
 x.send();
+alert(x.status);
 var launchers = JSON.parse(x.responseText);
 alert(launchers.gateway);
 var selected = null
