--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ var is3DS = navigator.platform.indexOf("Nintendo 3DS") >= 0;
 var x=new XMLHttpRequest();
 x.open('GET','rop.json',false);
 x.send();
-alert(x.status);
+alert(x.responseText);
 var launchers = JSON.parse(x.responseText);
-alert(launchers.gateway);
+alert(launchers);
 var selected = null
 var toggled = null;
 function setscroll(size){
