--- a/index.html
+++ b/index.html
@@ -50,25 +50,20 @@ function geturl(obj) {
 						if(hasOwnProperty('valueprefix')){
 							v += valueprefix;
 						}
-						if(hasOwnProperty('little-endian')){
-							a=value.toUpperCase().replace(/[^\dA-F]/g,'').match(/..?/g);
-							cc='';
-							while(a.length>0){
-								cc+=a.pop();
-							}
-							v += cc;
-						}else if(obj.id=="arcode"){
-							cc=value.toUpperCase().replace(/[^\dA-F]/g,'');
-							n=((cc.length+15)>>4).toString(16).toUpperCase();
-							ccc=Array(9-n.length).join('0')+n+cc;
-							cc='';
-							for(i=0;i<ccc.length;i+=8){
-								cc+=ccc.substring(i+6,i+8)+ccc.substring(i+4,i+6)+ccc.substring(i+2,i+4)+ccc.substring(i+0,i+2);
-							}
-							v += cc;
-						}else{
-							v += value;
+						c=value;
+						if(obj.id=="arcode"){
+							c=c.toUpperCase().replace(/[^\dA-F]/g,'');
+							n=((c.length+15)>>4).toString(16).toUpperCase();
+							c=Array(9-n.length).join('0')+n+c;
 						}
+						if(hasOwnProperty('little-endian')){
+							a=c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}?/g);
+							c=''
+							while(a.length>0){
+								for(b=a.shift().match(/..?/g);b.length>0;cc+=b.pop());
+							}
+						}
+						v += c;
 					}
 	}
 	return '/3ds/rop?' + v;
