--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ function geturl(obj) {
 							c=Array(9-n.length).join('0')+n+c;
 						}
 						if(hasOwnProperty('little-endian')){
-							a=c.toUpperCase().replace(/[^\dA-F]/g,'').match(/......../g);
+				alert(c.toUpperCase().replace(/[^\dA-F]/g,''));
+				alert(c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}/g).length);
+							a=c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}/g);
 							c='';
 							while(a.length>0){
 								for(b=a.shift().match(/..?/g);b.length>0;cc+=b.pop());
