--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@ function geturl(obj) {
 							c=Array(9-n.length).join('0')+n+c;
 						}
 						if(hasOwnProperty('little-endian')){
-				alert(c.toUpperCase().replace(/[^\dA-F]/g,''));
-				alert(c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}/g).length);
-							a=c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}/g);
-							c='';
-							while(a.length>0){
-								for(b=a.shift().match(/..?/g);b.length>0;cc+=b.pop());
-							}
+				alert(c.toUpperCase());
+//				alert(c.toUpperCase().replace(/[^\dA-F]/g,''));
+//				alert(c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}/g).length);
+//							a=c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}/g);
+//							c='';
+//							while(a.length>0){
+//								for(b=a.shift().match(/..?/g);b.length>0;cc+=b.pop());
+//							}
 						}
 						v += c;
 					}
