--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function geturl(obj) {
 						}
 						if(hasOwnProperty('little-endian')){
 				alert(c.toUpperCase());
-//				alert(c.toUpperCase().replace(/[^\dA-F]/g,''));
+				alert(c.toUpperCase().replace(/[^\dA-F]/g,''));
 //				alert(c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}/g).length);
 //							a=c.toUpperCase().replace(/[^\dA-F]/g,'').match(/.{8}/g);
 //							c='';
