--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ function geturl(obj) {
 							c='';
 							while(a.length>0){
 								b=a.shift().match(/..?/g);
-								while(b.length>0) cc+=b.pop();
+								while(b.length>0)
+									c+=b.pop();
 							}
 						}
 						v += c;
