--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
 <title>3DS Online Tools</title>
 <meta name=viewport content='width=400'>
-<script type=text/javascript src=/3ds/autostyle.js></script>
+<script type=text/javascript src=./autostyle.js></script>
 <script language=javascript>
 var is3DS = navigator.platform.indexOf("Nintendo 3DS") >= 0;
 var x=new XMLHttpRequest();
