--- a/test.html
+++ b/test.html
@@ -1,3 +1,8 @@
 <html><head><script>
-alert('test');
+a='test'.match(/./g);
+alert(a.shift());
+alert(a.shift());
+alert(a.shift());
+alert(a.shift());
+alert(a.shift());
 </script><head></html>
