--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@ a='test'.match(/./g);
 alert(a.shift());
 alert(a.shift());
 alert(a.shift());
-alert(a.shift().length;
-alert(a.shift().length;
+alert(a.shift().length);
+alert(a.shift().length);
 </script><head></html>
