--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <html><head><script>
 a='test'.match(/./g);
-alert(a.shift());
-alert(a.shift());
-alert(a.shift());
-alert(a.shift().length);
-alert(a.shift().length);
+if(a.shift()) alert('1');
+if(a.shift()) alert('2');
+if(a.shift()) alert('3');
+if(a.shift()) alert('4');
+if(a.shift()) alert('5');
 </script><head></html>
