--- a/test.html
+++ b/test.html
@@ -5,4 +5,5 @@ if(a.shift()) alert('2');
 if(a.shift()) alert('3');
 if(a.shift()) alert('4');
 if(a.shift()) alert('5');
+if(a.shift()) alert('6');
 </script><head></html>
