--- a/test.html
+++ b/test.html
@@ -4,6 +4,9 @@ if(a.shift()) alert('1');
 if(a.shift()) alert('2');
 if(a.shift()) alert('3');
 if(a.shift()) alert('4');
-if(a.shift()) alert('5')
-else alert('6');
+if(a.shift()){
+  alert('5');
+}else{
+  alert('6');
+}
 </script><head></html>
