--- a/test.html
+++ b/test.html
@@ -1,12 +1,28 @@
 <html><head><script>
 a='test'.match(/./g);
-if(a.shift()) alert('1');
-if(a.shift()) alert('2');
-if(a.shift()) alert('3');
-if(a.shift()) alert('4');
-if(a.shift()){
-  alert('5');
+if((c=a.shift()) && c.length>0){
+  alert(c);
 }else{
-  alert('6');
+  alert('failed');
+}
+if((c=a.shift()) && c.length>0){
+  alert(c);
+}else{
+  alert('failed');
+}
+if((c=a.shift()) && c.length>0){
+  alert(c);
+}else{
+  alert('failed');
+}
+if((c=a.shift()) && c.length>0){
+  alert(c);
+}else{
+  alert('failed');
+}
+if((c=a.shift()) && c.length>0){
+  alert(c);
+}else{
+  alert('failed');
 }
 </script><head></html>
