--- a/test.html
+++ b/test.html
@@ -1,28 +1,6 @@
 <html><head><script>
 a='test'.match(/./g);
-if((c=a.shift()) && c.length>0){
+while(c=a.shift()){
   alert(c);
-}else{
-  alert('failed');
-}
-if((c=a.shift()) && c.length>0){
-  alert(c);
-}else{
-  alert('failed');
-}
-if((c=a.shift()) && c.length>0){
-  alert(c);
-}else{
-  alert('failed');
-}
-if((c=a.shift()) && c.length>0){
-  alert(c);
-}else{
-  alert('failed');
-}
-if((c=a.shift()) && c.length>0){
-  alert(c);
-}else{
-  alert('failed');
 }
 </script><head></html>
