--- a/test.html
+++ b/test.html
@@ -3,5 +3,5 @@ a='test'.match(/./g);
 while(c=a.shift()){
   alert(c);
 }
-alert(atob('AAAA'));
+alert(atob('AAAA').length);
 </script><head></html>
