--- a/test.html
+++ b/test.html
@@ -1,7 +1,6 @@
 <html><head><script>
-a='test'.match(/./g);
+a=atob('AAAA').match(/./g);
 while(c=a.shift()){
   alert(c);
 }
-alert(atob('AAAA').length);
 </script><head></html>
