--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html><head><script>
 a=atob('////').match(/./g);
 while(c=a.shift()){
-  alert(ord(c));
+  alert(chr(c));
 }
 </script><head></html>
