--- a/test.html
+++ b/test.html
@@ -1,6 +1,9 @@
 <html><head><script>
 a=atob('////').match(/./g);
-while(c=a.shift()){
-  alert(c.charCodeAt(0));
+aa [];
+i=0;
+while(aa[i++]=a.shift()){
+//  alert(c.charCodeAt(0));
 }
+alert(aa.length);
 </script><head></html>
