--- a/test.html
+++ b/test.html
@@ -5,5 +5,6 @@ i=0;
 while(aa[i++]=a.shift()){
 //  alert(c.charCodeAt(0));
 }
-alert(aa.length);
+a='test';
+for(c in a)alert(a[c]));
 </script><head></html>
