--- a/test.html
+++ b/test.html
@@ -1,10 +1,10 @@
 <html><head><script>
-a=atob('////').match(/./g);
-aa=[];
-i=0;
-while(aa[i++]=a.shift()){
-//  alert(c.charCodeAt(0));
-}
-a='test';
+//a=atob('////').match(/./g);
+//aa=[];
+/i=0;
+//w/hile(aa[i++]=a.shift()){
+////  alert(c.charCodeAt(0));
+//}
+a='test'.split('');
 for(c in a)alert(a[c]));
 </script><head></html>
