--- a/test.html
+++ b/test.html
@@ -6,5 +6,6 @@
 ////  alert(c.charCodeAt(0));
 //}
 a='test'.split('');
-for(c in a)alert(a[c]));
+for(c in a)
+  alert(a[c]));
 </script><head></html>
