--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 //w/hile(aa[i++]=a.shift()){
 ////  alert(c.charCodeAt(0));
 //}
-a='test'.split('');
+a="test".split('');
 for(c in a)
   alert(a[c]));
 </script><head></html>
