--- a/auto.html
+++ b/auto.html
@@ -1,10 +1,6 @@
 <html><head></head><body>
-MSET
-<img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/mset.html'>
-NATIVE
-<img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/firm.html?N'>
-TWL
-<img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/firm.html?T'>
-AGB
-<img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/firm.html?A'>
+MSET<br><img src='https://chart.googleapis.com/chart?cht=qr&chl=http://dukerg.github.io/mset.html'><br>
+NATIVE<br><img src='https://chart.googleapis.com/chart?cht=qr&chl=http://dukerg.github.io/firm.html?N'><br>
+TWL<br><img src='https://chart.googleapis.com/chart?cht=qr&chl=http://dukerg.github.io/firm.html?T'><br>
+AGB<br><img src='https://chart.googleapis.com/chart?cht=qr&chl=http://dukerg.github.io/firm.html?A'><br>
 </body></html>
