--- a/auto.html
+++ b/auto.html
@@ -1,5 +1,5 @@
 <html><head></head><body><center>
-<li>MSET<br><img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/mset.html'></li>
+MSET<br><img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/mset.html'><br>
 NATIVE<br><img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/firm.html?N'><br>
 TWL<br><img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/firm.html?T'><br>
 AGB<br><img src='https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=http://dukerg.github.io/firm.html?A'><br>
