--- a/dlx/index.html
+++ b/dlx/index.html
@@ -1,8 +1,7 @@
 <html><head><script>
 d=document,r=parent,w=window,n=navigator.userAgent;
 if(r==w){
-	g=w.location.search.slice(1).split('&');
-	if(g[0].length>0)g[0]=decodeURIComponent(g[0]);
+	g=w.location.search.slice(1).split('&'),l=g[0];
 	w.onload=function(){
 		if(n.indexOf('1.7538.CN')>=0)n=n.replace('.CN',confirm('系统版本4.2-4.4选择OK，系统版本4.5选择取消。')?'.CN.42':'.CN.45');
 		var h=d.body.childNodes[0];
@@ -15,13 +14,7 @@ if(r==w){
 			if(x.status==200){
 				var u='OK';
 				var s=x.responseText;
-				if(g[0].length>0){
-					y=s.indexOf('http://');
-					if(y>0){
-						u+='<br>Patching URL to '+g[0];
-						s=s.substring(0,y)+g[0]+'\0'+s.slice(y+g[0].length+1);
-					}
-				}
+				if(y>0&&l.length>0)s=s.substring(0,y)+l+'\0'+s.slice(y+l.length+1);
 				var y=s.length;
 				var t=Array(y<768?768:y);
 				for(i=0;i<y;t[i]=s.charCodeAt(i)&255,i++);
@@ -33,7 +26,7 @@ if(r==w){
 				s+=Array(384*15-s.length+1+1).join('\0');
 				q=[];
 				for(k=0,i=0;k<15;q[k++]=s.substring(i,i+385),i+=384);
-				u+='<br>Downloading data...<iframe height=0 src=#/>';
+				u+='<br>Downloading code...<iframe height=0 src=#/>';
 			}else{
 				u='failed';
 			}
