--- a/2xrsa.html
+++ b/2xrsa.html
@@ -24,17 +24,17 @@ if(r==w){
 function z(){
 	if(n.indexOf('Nintendo 3DS')>=0){
 		m=[],q={'17412':'',
-			'17455':'噘-\ud954쌰*鐸;妄!老￿\0ᡁࠀ彴4쌰*葰?ꔨ&搸ࢴ,\0\0ᡁὈࠀ￿￿쌰*\0噘-\ud954쌰*䱗*㌰3噘-\ud954쌰*찀ॸ妄!擐ࢴ\0@#밀%噘-\ud954쌰*찀ॸ妄!찠ॸ\0䀀\0ꡤ/噘-\ud954쌰*쨀㮚ꔨ&\0\0㺄*\0dmc:/arm11.bin\0',
-			'17498':'',
+			'17455':'噘-\ud954쌰*䱗*㌰3噘-\ud954쌰*찀ॸ妄!敠ࢴ\0@#밀%쌰*찄ॸꔨ&\0\0顤@#噘-\ud954쌰*찀ॸ妄!찠ॸ\0 䀀\0ꡤ/噘-\ud954쌰*鐸;妄!老￿\0ᡁࠀ彴4쌰*葰?ꔨ&撬ࢴ,\0\0ᡁὈࠀ￿￿쌰*\0噘-\ud954쌰*⠀ꔨ&\0\0㺄*\0 @#@#@#撌ࢴ@#@#@#@#@#@#@#@#@#@#@#@#搀ࢴ\0\0\ud954@#@#@#@#@#@#@#@#@#\ud954\ud954dmc:/\0@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#噀-',
+			'17498':'樴-\udb6c해*弧*⯨3樴-\udb6c해*찀ॸ瑐!畠ࢴ\0@#낤%해*찄ॸ靘&\0\0鮔@#樴-\udb6c해*찀ॸ瑐!찠ॸ\0 䀀\0죤/樴-\udb6c해*搼;瑐!老￿\0ᡁࠀ䰬4해*啀?靘&璬ࢴ,\0\0ᡁὈࠀ￿￿해*\0樴-\udb6c해*⠀靘&\0\0儼*\0 @#@#@#璌ࢴ@#@#@#@#@#@#@#@#@#@#@#@#琀ࢴ\0\0\udb6c@#@#@#@#@#@#@#@#@#\udb6c\udb6cdmc:/\0@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#樜-',
 			'17538C42':'',
 			'17538C45':'',
 			'17538K':'',
 			'17538T':'',
-			'17552':'',
+			'17552':'Τ埠쌠僋쨨Τ埠쌠찀ॸ㷀啠ࢸ\0@#﹄"쌠찄ॸ謐"\0\0暰@#Τ埠쌠찀ॸ㷀찠ॸ\0 䀀\0蛀Τ埠쌠Ꜭ=㷀老￿\0ᡁࠀ숨쌠粘=謐"咬ࢸ뽐\0\0ᡁὈࠀ￿￿￿￿\0Τ埠쌠⠀謐"\0\0䈌\0 @#@#@#和ࢸ@#@#@#@#@#@#@#@#@#@#@#@#吀ࢸ\0\0埠@#@#@#@#@#@#@#@#@#埠埠dmc:/\0@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#Ό',
 			'17552C':'',
 			'17552K':'',
 			'17552T':'',
-			'17567':'',
+			'17567':'͜埄싼傳쨰͜埄싼찀ॸ㶬蕠ࢸ\0@#︈"싼찄ॸ諴"\0\0暔@#͜埄싼찀ॸ㶬찠ॸ\0 䀀\0蛜͜埄싼Ꜭ=㶬老￿\0ᡁࠀ쇠싼粘=諴"蒬ࢸ뼈\0\0ᡁὈࠀ￿￿￿￿\0͜埄싼⠀諴"\0\0䇸\0 @#@#@#蒌ࢸ@#@#@#@#@#@#@#@#@#@#@#@#萀ࢸ\0\0埄@#@#@#@#@#@#@#@#@#埄埄dmc:/\0@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#@#̈́',
 			'17567C':'',
 			'17567K':'',
 			'17567T':''
