--- a/policy/dofcalcpro.html
+++ b/policy/dofcalcpro.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width"> <title>Privacy Policy</title> <style>body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding:1em;}</style></head> <body><h2>Privacy Policy</h2> <p> Oleg Burdaev built the Словарь "Шэат Иврит" app as a Free app. This SERVICE is provided by Oleg Burdaev at no cost and is intended for use as is.
+<!DOCTYPE html><html> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width"> <title>Privacy Policy</title> <style>body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding:1em;}</style></head> <body><h2>Privacy Policy</h2> <p> Oleg Burdaev built the DOF Calculator Pro app as a Free app. This SERVICE is provided by Oleg Burdaev at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and
                     disclosure of Personal Information if anyone decided to use my Service.
                   </p> <p>If you choose to use my Service, then you agree to the collection and use of information in relation
@@ -6,7 +6,7 @@
                     Service. I will not use or share your information with anyone except as described
                     in this Privacy Policy.
                   </p> <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
-                    at Словарь "Шэат Иврит" unless otherwise defined in this Privacy Policy.
+                    at DOF Calculator Pro unless otherwise defined in this Privacy Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, I may require you to provide us with certain
                     personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
                   </p> <p>The app does use third party services that may collect information used to identify you.</p> <div><p>Link to privacy policy of third party service providers used by the app</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li> <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li> <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a></li> <!----> <!----> <!----></ul></div> <p><strong>Log Data</strong></p> <p> I want to inform you that whenever you use my Service, in a case of an
